# SmartPlug-Hub

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
app/: __init__.py  __main__.py  command_queue.py  config.py  connection.py  core.py  db.py  device_manager.py  device_service.py  kasa.py  logging.py  main.py  miio.py  miio_cloud.py  models.py  network.py  registry.py  schemas.py  utils.py
app/admin/: __init__.py  auth.py  router.py  service.py
app/backends/: kasa.py  miio.py
app/core/: __init__.py  backend.py  config.py  models.py  registry.py  settings.py
app/kasa/: __init__.py  backend.py  config.py  connection.py
app/miio/: __init__.py  backend.py  config.py  connection.py
config/: devices.example.json  settings.toml.example
static/: admin.html  admin.js  app.js  index.html  index.js  style.css
static/js/: api.js  devices.js  notifications.js  sse.js
static/js/admin/: accounts.js  api.js  auth.js  devices.js
tests/kasa/: test_device.py  test_device_by_mac.py  test_discover.py  utils.py
tests/miio/: test_device.py  test_discover.py
